--- a/app/client/styles/scrollbar.scss
+++ b/app/client/styles/scrollbar.scss
@@ -11,9 +11,9 @@
     border-radius: 5px;
 }
 
-::-webkit-scrollbar-track:hover {
-    background-color: #080808;
-}
+// ::-webkit-scrollbar-track:hover {
+//     background-color: #080808;
+// }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 5px;
