--- a/app/client/styles/scrollbar.scss
+++ b/app/client/styles/scrollbar.scss
@@ -11,11 +11,19 @@
     border-radius: 5px;
 }
 
-// ::-webkit-scrollbar-track:hover {
-//     background-color: #080808;
-// }
-
 ::-webkit-scrollbar-thumb {
     border-radius: 5px;
     background-color: #363636;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #404040;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+    background-color: #36363690;
+}
+
+::-webkit-scrollbar-thumb:horizontal:hover {
+    background-color: #404040;
 }
